<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.saefulrdevs.lifesync.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.saefulrdevs.lifesync.ui.main.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_menuFragment_to_taskFragment"
            app:destination="@id/taskFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.saefulrdevs.lifesync.ui.main.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.saefulrdevs.lifesync.ui.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/taskFragment"
        android:name="com.saefulrdevs.lifesync.ui.main.task.TaskFragment"
        android:label="TaskFragment"
        tools:layout="@layout/fragment_task" />

    <fragment
        android:id="@+id/add_task_group"
        android:name="com.saefulrdevs.lifesync.ui.main.task.AddTaskGroup"
        android:label="AddTaskGroup"
        tools:layout="@layout/fragment_add_task_group" />

    <fragment
        android:id="@+id/add_task"
        android:name="com.saefulrdevs.lifesync.ui.main.task.AddTask"
        android:label="AddTask"
        tools:layout="@layout/fragment_add_task" />
</navigation>