<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.started.TaskManagement">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="459dp"
        android:layout_gravity="center"
        android:contentDescription="@string/landing_screen_1_title"
        android:src="@drawable/task_scheduler" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lexend_deca"
        android:gravity="center"
        android:text="@string/landing_screen_1_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/landing_screen_1_description"
        android:textSize="16sp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnBack"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_arrow_back" />

        <Button
            android:id="@+id/btnNext"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:text="@string/landing_screen_next"
            app:icon="@drawable/ic_arrow_right"
            app:iconGravity="end"
            app:shapeAppearance="@style/CustomShapeAppearance" />
    </LinearLayout>

</LinearLayout>